<resources>
    <string name="app_name"> Moj dnevnik knjiga</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Send</string>
    <string name="edit_message">Enter message</string>
    <string name="title_activity_display_message">My Message</string>
    <string name="send_message">Send message</string>
    <string name="notRead">Nepročitana</string>
    <string name="reading">Čitanje u toku...</string>
    <string name="read">Pročitano</string>
    <string name="invalid">Nije evidentirano</string>
    <string name="title_activity_book_display">BookDisplayActivity</string>
    <string name="enter_title">Unesi naslov...</string>
    <string name="button_search">Nadji</string>
    <string name="add_book">Dodaj knjigu...</string>
    <string name="title_activity_add_book">Dodaj knjigu</string>
    <string name="enter_isbn">Unesi ISBN...</string>
    <string name="author_label">Autor: </string>
    <string name="desc_label">Opis: </string>
    <string name="load_pic_label">Učitaj sliku</string>
    <string name="status">Status knjige?</string>
    <string name="date_label">Datum izdavanja: </string>
    <string name="img_not_picked">Niste odabrali sliku! </string>
    <string name="error">Došlo je do greške! </string>
    <string name="book_found">Knjiga pronađena</string>
    <string name="book_title">Naslov</string>
    <string name="add_book_title">Upiši naslov...</string>
    <string name="book_author">Autor</string>
    <string name="add_book_author">Upiši autora...</string>
    <string name="book_isbn">ISBN</string>
    <string name="add_book_isbn">Upiši ISBN...</string>
    <string name="book_description">Opis</string>
    <string name="add_book_description">Upiši opis</string>
    <string name="book_publish_date">Datum objavljivanja</string>
    <string name="book_pages">Broj stranica:</string>
    <string name="add_book_publish_date">Datum objavljivanja</string>
    <string name="book_not_found">Knjiga nije pronađena</string>
    <string name="button_fill_by_isbn">Popuni po ISBNu</string>
    <string name="scan">Skeniraj ISBN</string>
</resources>
